# iTools

./: .gitignore  CLAUDE.md  README.md  admin.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
doc/: 开发准则.md  诚信实现审查报告.md
doc/图标系统/: 交接文档.md
doc/插件系统/: 交接文档.md  (+1 more)
plugins/: itools.d.ts
server/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
src/: admin.css  main.ts  styles.css  system-icons.ts  tool-icons.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json  pin.json  plugin.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: account_login.toml  account_state.toml  add_launch_items.toml  build_launch_item.toml  capture_overlay_ready.toml  capture_region_report.toml  check_update.toml  close_admin_window.toml  delete_account.toml  delete_plugin.toml  execute.toml  get_profile.toml  home_data.toml  launch_installer_and_quit.toml  load_icons.toml  open_admin_window.toml  open_plugin_window.toml  pick_app.toml  pick_launch_files.toml  pick_launch_folder.toml  pin_close.toml  pin_move.toml  pin_resize.toml  plugin_account_state.toml  plugin_capture_full.toml  plugin_capture_region.toml  plugin_copy_text.toml  plugin_create_pin.toml  plugin_data_get.toml  plugin_data_keys.toml  plugin_data_remove.toml  plugin_data_set.toml  plugin_data_sync.toml  plugin_db_get.toml  plugin_db_keys.toml  plugin_db_remove.toml  plugin_db_set.toml  plugin_exit.toml  plugin_fetch.toml  plugin_get_setting.toml  (+41 more)
src-tauri/src/: account.rs  commands.rs  hotkey.rs  launch.rs  lib.rs  logging.rs  main.rs  profile.rs  settings.rs  store.rs  sync.rs  updater.rs  window.rs
src-tauri/src/plugin/: audio.rs  bridge.js  capture.rs  commands.rs  hotkey.rs  mod.rs  native_overlay.rs  ocr.rs  overlay.html  pin.html  pin.rs  record.rs  settings.rs
src-tauri/src/search/: apps.rs  apps_folder.rs  builtins.rs  files.rs  icon.rs  mod.rs  winsearch.rs
(+36 files in other folders)
